--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "port": "3000",
-  "adminAccount": "crper@outlook.com",
+  "adminAccount": "admin@163.com",
   "versionNotify": true,
   "db": {
     "servername": "yapi-mongo",
